litmask/tests/compile/init_external_against_embedded_seal.stderr
error: init! tier-mismatch: init!(provider) unlocks the `external` seal tier, but this build sealed `embedded`
  --> tests/compile/init_external_against_embedded_seal.rs:13:13
   |
13 |     let _ = init!(some_provider);
   |             ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
